--- a/container/ci/serverconfig.json
+++ b/container/ci/serverconfig.json
@@ -6,16 +6,14 @@
       "name": "hg38-test",
       "species": "human",
       "file": "./genome/hg38.test.js",
-      "datasets": [
-        {
-          "name": "TermdbTest",
-          "jsfile": "./dataset/termdb.test.js"
-        }
-      ]
+      "datasets": [{
+        "name": "TermdbTest",
+        "jsfile": "./dataset/termdb.test.js"
+      }]
     }
   ],
-  "tpmasterdir": "/home/runner/work/sjpp/sjpp/proteinpaint/server/test/tp",
-  "cachedir": "/home/runner/work/sjpp/sjpp/proteinpaint/cache",
+  "tpmasterdir": "/home/runner/work/proteinpaint/proteinpaint/server/test/tp",
+  "cachedir": "/home/runner/work/proteinpaint/proteinpaint/cache",
   "URL": "http://localhost:3000",
   "port": 3000,
   "backend_only": true
