--- a/.github/workflows/CI-merge-change-log.yml
+++ b/.github/workflows/CI-merge-change-log.yml
@@ -41,5 +41,6 @@ jobs:
             git config --global user.name "PPTeam CI"
             git commit -m "append release notes to change log"
             BRANCH=$(git rev-parse --abbrev-ref HEAD)
+            git pull --rebase
             git push origin $BRANCH
           fi
