update package script to use tsx for server development

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "reset": "rm -rf ./node_modules && rm -rf ./**/node_modules && npm install",
     "transpileDynLoaded": "tsc --watch server/genome/*.ts server/dataset/*.ts",
     "predev": "if [[ -d ./client ]]; then node ./client/test/import-specs.js name=? && rm -f ../public/bin/*proteinpaint.js; fi",
-    "bundle": "rm -f server/server.js* && webpack --config=./webpack.config.js --env NODE_ENV=development --watch --color",
+    "bundle": "cd client; webpack --env NODE_ENV=development --watch --color; cd ..",
     "dev": "npm run transpileDynLoaded & npm run bundle -- --progress",
-    "start": "./build/dev/resetBundles.sh && nodemon --enable-source-maps server/server.js",
+    "start": "tsx watch server/src/app.ts",
     "dev1": "trap 'kill %1' INT; npm run transpileDynLoaded & npm run bundle & npm start",
     "server": "trap 'kill %1' INT; npm run dev -w @sjcrh/proteinpaint-server & npm start",
     "client": "npm run dev -w @sjcrh/proteinpaint-client",
