--- a/server/package.json
+++ b/server/package.json
@@ -11,24 +11,24 @@
     "#routes/*": "./routes/*"
   },
   "scripts": {
-    "prepare": "ts-patch install",
-    "dev": "webpack --env NODE_ENV=development --watch --color",
-    "start": "tsc --esModuleInterop genome/*.ts dataset/*.ts && nodemon --enable-source-maps server.js --watch ./server*.js* --watch dataset/*.ts --watch genome/*.ts",
+    "dev": "npm run start",
+    "prestart": "tsx emitImports.js dev > server.js",
+    "start": "tsx watch src/app.ts",
+    "test:unit": "tsx emitImports.js unit > serverTests.js && tsx serverTests.js",
+    "pretest:integration": "tsc --esModuleInterop genome/*.ts dataset/*.ts",
+    "test:integration": "echo 'TODO: server integration tests'",
+    "prepack": "tsc --esModuleInterop genome/*.ts dataset/*.ts", 
+    "getconf": "../build/getConfigProp.js",
+    "doc": "../augen/build.sh routes shared/types/routes shared/checkers ../public/docs/server",
+    "//todo": "refactor or deprecate the scripts below",
     "pretest": "tsc --esModuleInterop genome/*.ts dataset/*.ts && ./test/pretest.js",
     "test": "webpack --env NODE_ENV=test exportsFilename=all-test-context.js && node --enable-source-maps test/serverTests.js",
+    "prepare": "ts-patch install",
     "precheckers": "tsc --esModuleInterop genome/*.ts dataset/*.ts",
     "checkers": "webpack --config=./test/webpack.config.js && node test/emitPrepFiles.bundle.js && typia generate --input shared/checkers-raw --output shared/checkers",
     "pretest:type": "npm run checkers",
     "test:type": "webpack --env NODE_ENV=test exportsFilename=type-test-context.js && node --enable-source-maps test/serverTests.js",
-    "pretest:unit": "npm run precheckers",
-    "test:unit": "webpack --env NODE_ENV=test exportsFilename=unit-test-context.js && node --enable-source-maps test/serverTests.js",
-    "pretest:integration": "tsc --esModuleInterop genome/*.ts dataset/*.ts",
-    "test:integration": "echo 'TODO: server integration tests'",
-    "prepack": "tsc --esModuleInterop genome/*.ts dataset/*.ts && webpack --env NODE_ENV=production",
-    "test:tsc": "tsc --esModuleInterop --noEmit --allowImportingTsExtensions ./shared/types/test/*.type.spec.ts",
-    "response": "nodemon modules/test/test.server.js --watch src",
-    "getconf": "../build/getConfigProp.js",
-    "doc": "../augen/build.sh routes shared/types/routes shared/checkers ../public/docs/server"
+   "test:tsc": "tsc --esModuleInterop --noEmit --allowImportingTsExtensions ./shared/types/test/*.type.spec.ts"
   },
   "author": "",
   "license": "SEE LICENSE IN ./LICENSE",
