go back to using webpack to bundle server code for packing

--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "@sjcrh/proteinpaint-server",
   "version": "2.44.0",
   "description": "a genomics visualization tool for exploring a cohort's genotype and phenotype data",
-  "main": "server.js",
+  "main": "dist/server.js",
   "bin": "start.js",
   "imports": {
     "#shared/*": "./shared/*",
@@ -17,7 +17,7 @@
     "test:unit": "tsx emitImports.js unit > serverTests.js && tsx serverTests.js",
     "pretest:integration": "tsc --esModuleInterop genome/*.ts dataset/*.ts",
     "test:integration": "echo 'TODO: server integration tests'",
-    "prepack": "tsc --esModuleInterop genome/*.ts dataset/*.ts", 
+    "prepack": "tsc --esModuleInterop genome/*.ts dataset/*.ts && webpack --env NODE_ENV=production",
     "getconf": "../build/getConfigProp.js",
     "doc": "../augen/build.sh routes shared/types/routes shared/checkers ../public/docs/server",
     "//todo": "refactor or deprecate the scripts below",
@@ -96,16 +96,14 @@
     "src/mds3.gdc.filter.js",
     "src/checkReadingFrame.js",
     "src/bedj.parseBed.js",
-    "routes/*",
+    "routes/*.js",
     "cards/*",
-    "server.js*",
+    "*server.js*",
     "start.js",
     "shared/common.js",
     "shared/termdb.initbinconfig.js",
     "shared/vcf.js",
     "utils/*.R",
-    "utils/rust/*.*",
-    "utils/rust/src",
     "LICENSE/*"
   ],
   "bugs": {
