--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,5 +5,11 @@
   },
   "types": ["node"],
   "include": ["./**/*.ts"],
-  "exclude": ["./**/*.type.spec.ts"]
+  "exclude": ["./**/*.type.spec.ts"],
+  "paths": {
+    "#shared/*": ["./shared/*"],
+    "#shared/types/*": ["./shared/types/*"],
+    "#src/*": ["./src/*"],
+    "#routes/*": ["./routes/*"]
+  }
 }
