--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "@sjcrh/proteinpaint-server",
   "version": "2.44.0",
   "description": "a genomics visualization tool for exploring a cohort's genotype and phenotype data",
-  "main": "dist/server.js",
+  "main": "app/src.js",
   "bin": "start.js",
   "imports": {
     "#shared/*": "./shared/*",
@@ -17,8 +17,8 @@
     "test:unit": "tsx emitImports.js unit > serverTests.js && tsx serverTests.js",
     "pretest:integration": "tsc --esModuleInterop genome/*.ts dataset/*.ts",
     "test:integration": "echo 'TODO: server integration tests'",
-    "prepack": "tsc --esModuleInterop genome/*.ts dataset/*.ts && webpack --env NODE_ENV=production",
-    "postpack": "rm *.server.*",
+    "prepack": "tsc",
+    "postpack": "rm -f *.server.* ",
     "getconf": "../build/getConfigProp.js",
     "doc": "../augen/build.sh routes shared/types/routes shared/checkers ../public/docs/server",
     "//todo": "refactor or deprecate the scripts below",
@@ -90,20 +90,14 @@
   "files": [
     "bin.js",
     "dataset/clinvar*.js",
-    "dataset/gdc*.js",
+    "dataset/*.js",
     "genome/*.js",
-    "src/serverconfig.js",
-    "src/lines2R.js",
-    "src/mds3.gdc.filter.js",
-    "src/checkReadingFrame.js",
-    "src/bedj.parseBed.js",
+    "src/*.js",
     "routes/*.js",
     "cards/*",
     "*server.js*",
     "start.js",
-    "shared/common.js",
-    "shared/termdb.initbinconfig.js",
-    "shared/vcf.js",
+    "shared/*.js",
     "utils/*.R",
     "LICENSE/*"
   ],
