--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@sjcrh/proteinpaint-server",
   "version": "2.44.0",
+  "type": "module",
   "description": "a genomics visualization tool for exploring a cohort's genotype and phenotype data",
   "main": "app/src.js",
   "bin": "start.js",
