--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "postpack": "rm -f *.server.* ",
     "getconf": "../build/getConfigProp.js",
     "doc": "../augen/build.sh routes shared/types/routes shared/checkers ../public/docs/server",
+    "mjs": "esbuild \"$DIR/*.ts\" --platform=node --outdir=\"$DIR\" --out-extension:.js=.mjs",
     "//todo": "refactor or deprecate the scripts below",
     "pretest": "tsc --esModuleInterop genome/*.ts dataset/*.ts && ./test/pretest.js",
     "test": "webpack --env NODE_ENV=test exportsFilename=all-test-context.js && node --enable-source-maps test/serverTests.js",
@@ -90,9 +91,9 @@
   },
   "files": [
     "bin.js",
-    "dataset/clinvar*.js",
-    "dataset/*.js",
-    "genome/*.js",
+    "dataset/clinvar*.mjs",
+    "dataset/*.mjs",
+    "genome/*.mjs",
     "src/*.js",
     "routes/*.js",
     "cards/*",
