update the server build and pack scripts

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "description": "a genomics visualization tool for exploring a cohort's genotype and phenotype data",
   "main": "app/src.js",
-  "bin": "start.js",
+  "bin": "server.js",
   "imports": {
     "#shared/*": "./shared/*",
     "#shared/types/*": "./shared/types/*",
@@ -18,20 +18,21 @@
     "test:unit": "tsx emitImports.js unit > serverTests.js && tsx serverTests.js",
     "pretest:integration": "tsc --esModuleInterop genome/*.ts dataset/*.ts",
     "test:integration": "echo 'TODO: server integration tests'",
-    "prepack": "tsc",
-    "postpack": "rm -f *.server.* ",
+    "prepack": "npm run build",
+    "postpack": "rm -f ./**/*.mjs",
     "getconf": "../build/getConfigProp.js",
     "doc": "../augen/build.sh routes shared/types/routes shared/checkers ../public/docs/server",
     "mjs": "esbuild \"$DIR/*.ts\" --platform=node --outdir=\"$DIR\" --out-extension:.js=.mjs",
+    "prebuild": "DIR=genome npm run mjs; DIR=dataset npm run mjs; DIR=routes npm run mjs",
+    "build": "npx esbuild start.js --bundle --platform=node --packages=external --format=esm --sourcemap > server.js",
+    "postbuild": "./postbuild.sh",
     "//todo": "refactor or deprecate the scripts below",
     "pretest": "tsc --esModuleInterop genome/*.ts dataset/*.ts && ./test/pretest.js",
-    "test": "webpack --env NODE_ENV=test exportsFilename=all-test-context.js && node --enable-source-maps test/serverTests.js",
     "prepare": "ts-patch install",
     "precheckers": "tsc --esModuleInterop genome/*.ts dataset/*.ts",
     "checkers": "webpack --config=./test/webpack.config.js && node test/emitPrepFiles.bundle.js && typia generate --input shared/checkers-raw --output shared/checkers",
     "pretest:type": "npm run checkers",
-    "test:type": "webpack --env NODE_ENV=test exportsFilename=type-test-context.js && node --enable-source-maps test/serverTests.js",
-   "test:tsc": "tsc --esModuleInterop --noEmit --allowImportingTsExtensions ./shared/types/test/*.type.spec.ts"
+    "test:tsc": "tsc --esModuleInterop --noEmit --allowImportingTsExtensions ./shared/types/test/*.type.spec.ts"
   },
   "author": "",
   "license": "SEE LICENSE IN ./LICENSE",
@@ -91,15 +92,16 @@
   },
   "files": [
     "bin.js",
-    "dataset/clinvar*.mjs",
     "dataset/*.mjs",
     "genome/*.mjs",
-    "src/*.js",
-    "routes/*.js",
-    "cards/*",
     "*server.js*",
     "start.js",
-    "shared/*.js",
+    "src/serverconfig.js",
+    "src/lines2R.js",
+    "src/mds3.gdc.filter.js",
+    "src/checkReadingFrame.js",
+    "src/bedj.parseBed.js",
+    "routes/*.mjs",
     "utils/*.R",
     "LICENSE/*"
   ],
