--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,9 @@ dist/*
 */*/*/dist/
 
 server/app.js
+server/**/*.mjs
 server/dataset/*.js
-server/dataset/*.mjs
 server/genome/*.js
-server/genome/*.mjs
 server/shared/doc.js
 server/shared/checkers/transformed/*
 server/shared/checkers/bin/*
