--- a/container/full/package.json
+++ b/container/full/package.json
@@ -7,8 +7,8 @@
 		"release": ""
 	},
 	"dependencies": {
-		"@sjcrh/proteinpaint-front": "/home/root/pp/tmppack/sjcrh-proteinpaint-front-2.45.0.tgz",
-		"@sjcrh/proteinpaint-server": "/home/root/pp/tmppack/sjcrh-proteinpaint-server-2.44.0.tgz"
+		"@sjcrh/proteinpaint-front": "2.45.0",
+		"@sjcrh/proteinpaint-server": "2.44.0"
 	},
 	"files": [
 		"app-full.js"
