--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,9 @@
   "main": "app/src.js",
   "bin": "server.js",
   "imports": {
-    "#shared/*": "./shared/*",
+    "#types": "./shared/types/index.ts",
     "#shared/types/*": "./shared/types/*",
+    "#shared/*": "./shared/*",
     "#src/*": "./src/*",
     "#routes/*": "./routes/*"
   },
@@ -44,6 +45,7 @@
     "@babel/preset-typescript": "^7.21.4",
     "@babel/register": "^7.14.5",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@types/node": "^20.2.4",
     "babel-loader": "^8.2.2",
     "esbuild": "^0.19.12",
     "node-watch": "^0.7.1",
@@ -73,7 +75,7 @@
     "deep-object-diff": "^1.1.0",
     "express": "^4.17.1",
     "express-basic-auth": "^1.1.5",
-    "got": "^11.5.1",
+    "got": "^14.2.0",
     "image-size": "^0.5.5",
     "jsonwebtoken": "^9.0.0",
     "jstat": "^1.9.3",
