--- a/.github/workflows/CI-unit.yml
+++ b/.github/workflows/CI-unit.yml
@@ -52,8 +52,9 @@ jobs:
 
       - name: Run tsc
         run: |
-          cd server && npm run checkers && cd ..
-          npx tsc --noEmit --esModuleInterop --allowImportingTsExtensions
+          # !!! TODO: run type check at the proteinpaint dir !!!
+          cd server 
+          npx tsc
           cd ..
 
       - name: Create server cache folder
