--- a/augen/package.json
+++ b/augen/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "esbuild": "^0.19.12",
     "express": "^4.17.1",
+    "glob": "^7.2.3",
     "tape": "^5.2.2",
     "tsx": "^4.7.1"
   },
