convert genome and dataset files to js, and check types in a server.ts file that imports those files for assignment to typed values

--- a/.github/workflows/CI-integration.yml
+++ b/.github/workflows/CI-integration.yml
@@ -65,7 +65,11 @@ jobs:
         run: sudo apt-get install xvfb
 
       - name: TSC
-        run: cd server; npx tsc; cd .. 
+        run: |
+          cd server
+          node emitImports.js dev > server.ts
+          npx tsc
+          cd ..
 
       - name: CP termdb
         run: |
