update the build and pack scripts to not generate genome and ds esm files

--- a/server/package.json
+++ b/server/package.json
@@ -25,9 +25,8 @@
     "getconf": "../build/getConfigProp.js",
     "doc": "../augen/build.sh routes shared/types/routes shared/checkers ../public/docs/server",
     "mjs": "esbuild \"$DIR/*.ts\" --platform=node --outdir=\"$DIR\" --out-extension:.js=.mjs",
-    "prebuild": "DIR=genome npm run mjs; DIR=dataset npm run mjs; DIR=routes npm run mjs",
+    "prebuild": "DIR=routes npm run mjs",
     "build": "npx esbuild start.js --bundle --platform=node --packages=external --format=esm --sourcemap > server.js",
-    "postbuild": "./postbuild.sh",
     "//todo": "refactor or deprecate the scripts below",
     "pretest": "tsc --esModuleInterop genome/*.ts dataset/*.ts && ./test/pretest.js",
     "prepare": "ts-patch install",
@@ -91,16 +90,16 @@
   },
   "files": [
     "bin.js",
-    "dataset/*.mjs",
-    "genome/*.mjs",
+    "dataset/*.js",
+    "genome/*.js",
     "*server.js*",
+    "routes/*.mjs",
     "start.js",
     "src/serverconfig.js",
     "src/lines2R.js",
     "src/mds3.gdc.filter.js",
     "src/checkReadingFrame.js",
     "src/bedj.parseBed.js",
-    "routes/*.mjs",
     "utils/*.R",
     "LICENSE/*"
   ],
