--- a/.github/workflows/CI-integration.yml
+++ b/.github/workflows/CI-integration.yml
@@ -67,6 +67,7 @@ jobs:
       - name: TSC
         run: |
           cd server
+          cp test/serverconfig.json .
           node emitImports.js dev > server.ts
           npx tsc
           cd ..
