--- a/container/full/package.json
+++ b/container/full/package.json
@@ -2,6 +2,7 @@
 	"private": true,
 	"name": "@sjcrh/ppfull",
 	"version": "2.45.0",
+	"type": "module",
 	"bin": "app-full.js",
 	"scripts": {
 		"release": ""
