--- a/container/server/package.json
+++ b/container/server/package.json
@@ -2,6 +2,7 @@
 	"private": true,
 	"name": "@sjcrh/ppserver",
 	"version": "2.44.0",
+	"type": "module",
 	"bin": "app-server.js",
 	"scripts": {
 		"release": ""
