fix the file extensions for package main and module; fix the import of serverconfig to trigger server restart on change

--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
   "version": "2.44.0",
   "type": "module",
   "description": "a genomics visualization tool for exploring a cohort's genotype and phenotype data",
-  "main": "src/app.ts",
-  "module": "src/app.ts",
+  "main": "src/app.mjs",
+  "module": "src/app.mjs",
   "bin": "server.js",
   "imports": {
     "#types": "./shared/types/index.ts",
@@ -25,7 +25,8 @@
     "getconf": "../build/getConfigProp.js",
     "doc": "../augen/build.sh routes shared/types/routes shared/checkers ../public/docs/server",
     "mjs": "esbuild \"$DIR/*.ts\" --platform=node --outdir=\"$DIR\" --out-extension:.js=.mjs",
-    "prebuild": "DIR=routes npm run mjs",
+    "prebuild": "DIR=genome npm run mjs; DIR=dataset npm run mjs; DIR=routes npm run mjs",
+    "postbuild": "./postbuild.sh",
     "build": "npx esbuild start.js --bundle --platform=node --packages=external --format=esm --sourcemap > server.js",
     "//todo": "refactor or deprecate the scripts below",
     "pretest": "tsc --esModuleInterop genome/*.ts dataset/*.ts && ./test/pretest.js",
