update package scripts

--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
   "version": "2.44.0",
   "type": "module",
   "description": "a genomics visualization tool for exploring a cohort's genotype and phenotype data",
-  "main": "src/app.mjs",
-  "module": "src/app.mjs",
+  "main": "src/app.js",
+  "module": "src/app.js",
   "bin": "server.js",
   "imports": {
     "#types": "./shared/types/index.ts",
@@ -17,17 +17,18 @@
     "dev": "npm run start",
     "prestart": "tsx emitImports.js dev > server.js",
     "start": "tsx watch src/app.ts",
+    "pretest:unit": "cp test/serverconfig.json",
     "test:unit": "tsx emitImports.js unit > serverTests.js && tsx serverTests.js",
     "pretest:integration": "tsc --esModuleInterop genome/*.ts dataset/*.ts",
     "test:integration": "echo 'TODO: server integration tests'",
-    "prepack": "npm run build",
-    "postpack": "rm -f ./**/*.mjs",
     "getconf": "../build/getConfigProp.js",
     "doc": "../augen/build.sh routes shared/types/routes shared/checkers ../public/docs/server",
-    "mjs": "esbuild \"$DIR/*.ts\" --platform=node --outdir=\"$DIR\" --out-extension:.js=.mjs",
+    "mjs": "esbuild \"$DIR/*.ts\" --platform=node --outdir=\"$DIR\"",
     "prebuild": "DIR=genome npm run mjs; DIR=dataset npm run mjs; DIR=routes npm run mjs",
-    "postbuild": "./postbuild.sh",
     "build": "npx esbuild start.js --bundle --platform=node --packages=external --format=esm --sourcemap > server.js",
+    "postbuild": "./postbuild.sh",
+    "prepack": "npm run build",
+    "postpack": "./dedupjs.sh",
     "//todo": "refactor or deprecate the scripts below",
     "pretest": "tsc --esModuleInterop genome/*.ts dataset/*.ts && ./test/pretest.js",
     "prepare": "ts-patch install",
@@ -94,7 +95,7 @@
     "dataset/*.js",
     "genome/*.js",
     "*server.js*",
-    "routes/*.mjs",
+    "routes/*.js",
     "start.js",
     "src/serverconfig.js",
     "src/lines2R.js",
