--- a/package.json
+++ b/package.json
@@ -16,15 +16,13 @@
   ],
   "scripts": {
     "reset": "rm -rf ./node_modules && rm -rf ./**/node_modules && npm install",
-    "transpileDynLoaded": "tsc --watch server/genome/*.ts server/dataset/*.ts",
     "predev": "if [[ -d ./client ]]; then node ./client/test/import-specs.js name=? && rm -f ../public/bin/*proteinpaint.js; fi",
     "bundle": "cd client; webpack --env NODE_ENV=development --watch --color; cd ..",
-    "dev": "npm run transpileDynLoaded & npm run bundle -- --progress",
+    "dev": "npm run bundle -- --progress",
     "start": "cd server; npm start",
-    "dev1": "trap 'kill %1' INT; npm run transpileDynLoaded & npm run bundle & npm start",
+    "dev1": "trap 'kill %1' INT; npm run bundle & npm start",
     "server": "trap 'kill %1' INT; npm run dev -w @sjcrh/proteinpaint-server & npm start",
     "client": "npm run dev -w @sjcrh/proteinpaint-client",
-    "ci-pp-server": "tsc --esModuleInterop server/genome/*.ts server/dataset/*.ts && ./build/dev/resetBundles.sh && node server/server.js &",
     "test:integration": "webpack --config=./webpack.config.js && npm run ci-pp-server && sleep 10 && npm run test:integration --workspace=client",
     "test:integration-ci": "npm run test:integration --workspace=client",
     "posttest:integration": "./build/integration/exitZeroOnPKillNode.sh",
