--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,7 @@
     "dev": "npm run start",
     "prestart": "tsx emitImports.js dev > server.js",
     "start": "tsx watch src/app.ts",
-    "pretest:unit": "cp test/serverconfig.json .",
-    "test:unit": "tsx emitImports.js unit > serverTests.js && tsx serverTests.js",
+    "test:unit": "tsx emitImports.js unit > serverTests.js && tsx serverTests.js && rm -rf ./cache",
     "pretest:integration": "tsc --esModuleInterop genome/*.ts dataset/*.ts",
     "test:integration": "echo 'TODO: server integration tests'",
     "getconf": "../build/getConfigProp.js",
