--- a/.github/workflows/CI-integration.yml
+++ b/.github/workflows/CI-integration.yml
@@ -73,7 +73,10 @@ jobs:
       - name: CP termdb
         run: |
           mkdir -p container/dataset
-          cp server/dataset/termdb.test.js container/dataset
+          cd server
+          DIR=dataset npm run mjs
+          cp ./dataset/termdb.test.js ../container/dataset
+          npm run dedup
 
       - name: Login to Github
         uses: docker/login-action@v3
