convert container packages to type=commonjs (default) in order not to break hosts that have cjs dataset files

--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "test:unit": "tsx emitImports.js unit > serverTests.js && tsx serverTests.js && rm -rf ./cache",
     "getconf": "../build/getConfigProp.js",
     "doc": "../augen/build.sh routes shared/types/routes shared/checkers ../public/docs/server",
-    "mjs": "esbuild \"$DIR/*.ts\" --platform=node --outdir=\"$DIR\"",
+    "mjs": "esbuild \"$DIR/*.ts\" --platform=node --outdir=\"$DIR\" --format=esm",
+    "cjs": "esbuild \"$DIR/*.ts\" --platform=node --outdir=\"$DIR\" --format=cjs",
     "build": "./build.sh",
     "prepack": "npm run build",
     "postpack": "./dedupjs.sh",
