--- a/container/full/package.json
+++ b/container/full/package.json
@@ -7,8 +7,8 @@
 		"release": ""
 	},
 	"dependencies": {
-		"@sjcrh/proteinpaint-front": "2.46.3",
-		"@sjcrh/proteinpaint-server": "2.46.3"
+		"@sjcrh/proteinpaint-front": "/home/root/pp/tmppack/sjcrh-proteinpaint-front-2.46.2.tgz",
+		"@sjcrh/proteinpaint-server": "/home/root/pp/tmppack/sjcrh-proteinpaint-server-2.46.2.tgz"
 	},
 	"files": [
 		"app-full.js"
