--- a/container/server/package.json
+++ b/container/server/package.json
@@ -7,7 +7,8 @@
 		"release": ""
 	},
 	"dependencies": {
-		"@sjcrh/proteinpaint-server": "/home/root/pp/tmppack/sjcrh-proteinpaint-server-2.46.2.tgz"
+		"@sjcrh/proteinpaint-front": "2.46.3",
+		"@sjcrh/proteinpaint-server": "2.46.3"
 	},
 	"files": [
 		"app-server.js"
