--- a/container/deps/package.json
+++ b/container/deps/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@sjcrh/proteinpaint-container",
-	"server": "2.41.1",
+	"version": "2.41.1",
 	"bin": "launch.js",
 	"scripts": {
 		"//": "this dev script is for developing and testing the container itself, not for using the container as a dev environment",
