--- a/server/package.json
+++ b/server/package.json
@@ -97,7 +97,7 @@
     "start.js",
     "src/app.js",
     "src/serverconfig.js",
-    "src/lines2R.js",
+    "src/run_R.js",
     "src/mds3.gdc.filter.js",
     "src/checkReadingFrame.js",
     "src/bedj.parseBed.js",
