--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "dev": "npm run start",
     "prestart": "tsx emitImports.js dev > server.js",
-    "start": "tsx watch src/app.ts",
+    "start": "tsx watch . /start.js",
     "test:unit": "tsx emitImports.js unit > serverTests.js && tsx serverTests.js && rm -rf ./cache",
     "getconf": "../build/getConfigProp.js",
     "doc": "../augen/build.sh routes shared/types/routes shared/checkers ../public/docs/server",
