--- a/container/full/package.json
+++ b/container/full/package.json
@@ -7,7 +7,7 @@
 		"release": ""
 	},
 	"dependencies": {
-		"@sjcrh/proteinpaint-front": "2.58.1-0",
+		"@sjcrh/proteinpaint-front": "2.58.0",
 		"@sjcrh/proteinpaint-server": "2.58.1-0"
 	},
 	"files": [
