--- a/.github/workflows/CI-unit.yml
+++ b/.github/workflows/CI-unit.yml
@@ -69,6 +69,10 @@ jobs:
             echo "WS_TO_TEST=$(./build/requiresTest.sh)" >> $GITHUB_ENV
           fi
 
+      - name: 🔎 Run client pack test tests
+        if: contains(env.WS_TO_TEST, 'client')
+        run: npm pack --workspace="client"
+
       - name: 🔎 Run client tests
         if: contains(env.WS_TO_TEST, 'client')
         run: |
